Rework responsive design of Higher Ed page
Added variable-sized fonts
Used separate student image, color bar passes behind him
Added variable sized text to K-12 page and buckets
Also made scrollTo account for menu height and padded filter
so filter buttons are not partly covered
Made layout of K-12 and Higher Ed more closely match the visual
design documents at 1200px wide

--- a/src/app/pages/details/details.hbs
+++ b/src/app/pages/details/details.hbs
@@ -55,9 +55,9 @@
             </div>
             {{{strips}}}
         </section>
-        <section id="resources" class="resources block">
+        <section class="resources block">
             <div class="container">
-            <div class="row">
+            <div id="resources" class="row">
                 <h3>OpenStax Instructor Resources</h3>
                 <p>
                     Access these free resources with your verified instructor account.
