--- a/src/app/pages/k-12/tutor/tutor.hbs
+++ b/src/app/pages/k-12/tutor/tutor.hbs
@@ -1,7 +1,7 @@
-<div class="tutor">
+<div class="tutor hero">
     <div class="tutor-caption">
         <div class="caption">
-            <span class="title">OpenStax Tutor</span>
+            <h1>OpenStax Tutor</h1>
             <span class="blurb">
                 Our customizable courseware uses cognitive science and machine
                 learning to create a personalized learning experience that
