--- a/src/app/pages/subjects/subjects.scss
+++ b/src/app/pages/subjects/subjects.scss
@@ -64,6 +64,10 @@
         }
     }
 
+    .filter {
+        padding: 0.2rem 0;
+    }
+
     .blurb {
         flex: 1 28%;
         font-size: 1.6rem;
