--- a/src/styles/variables/responsive.scss
+++ b/src/styles/variables/responsive.scss
@@ -3,8 +3,7 @@ $breakpoints: (
     tablet: 768px
 );
 
-// boxed view 1200px
-$boxed-width: 120rem;
+$boxed-width: 1200px; // For @media, 120rem != 1200px
 
 @function breakpoints($breakpoint) {
     @if map-has-key($breakpoints, $breakpoint) {
