--- a/src/app/pages/higher-ed/higher-ed.hbs
+++ b/src/app/pages/higher-ed/higher-ed.hbs
@@ -4,6 +4,11 @@
 <div class="higher-ed-page page">
     <main id="maincontent">
         <div class="hero">
+            <div class="container">
+                <img class="student" src="/images/higher-ed/student.png" />
+            </div>
+            <div class="square-1"></div>
+            <div class="square-2"></div>
             <div class="overlay">
                 <div class="text-block">
                     <h1 class="header">Here is the first song off our new album.</h1>
@@ -20,7 +25,7 @@
         <div id="getting-started" class="getting-started">
             <div class="header">Getting Started</div>
             <ol class="steps">
-                <li class="step">
+                <li class="numbered step">
                     <div class="title">Review a Textbook</div>
                     <div class="blurb">
                         The entire contents of our free textbooks are
@@ -30,7 +35,7 @@
                     <div class="more"><a href="/subjects">View Books</a></div>
                 </li>
 
-                <li class="step">
+                <li class="numbered step">
                     <div class="title">Create a Faculty Account</div>
                     <div class="blurb">
                         We provide additional free instructor-only resources
@@ -40,7 +45,7 @@
                     <div class="more"><a class="login-link">Create Account</a></div>
                 </li>
 
-                <li class="step">
+                <li class="numbered step">
                     <div class="title">Adopt a Textbook</div>
                     <div class="blurb">
                         Access to our textbooks is completely free. Let us
@@ -52,7 +57,7 @@
                 </li>
             </ol>
 
-            <div class="institution">
+            <div class="step">
                 <div class="title">Adopt as an Institution</div>
                 <div class="blurb">
                     If you are an administrator interested in driving adoptions
