Small copy changes to bios and about us banner text

--- a/src/app/pages/about-us/about-us.hbs
+++ b/src/app/pages/about-us/about-us.hbs
@@ -6,7 +6,7 @@
     <p class="subhead">
         OpenStax is a nonprofit based at Rice University, and it’s our mission to
         improve student access to education. Our first open source college
-        textbook was published in 2012 and has since scaled to 19 books used by
+        textbook was published in 2012 and has since scaled to more than 20 books used by
         hundreds of thousands of students across the globe. Our adaptive learning
         technology, designed to improve learning outcomes through personalized
         educational paths, are currently being piloted for K-12 and college.
