--- a/src/app/components/products-boxes/products-boxes.scss
+++ b/src/app/components/products-boxes/products-boxes.scss
@@ -89,4 +89,8 @@
     .cc > .image {
         background-image: url('/images/k-12/student.jpg');
     }
+
+    .tutor > .image {
+        background-image: url('/images/k-12/bx-cnx-2x.jpg');
+    }
 }
