Bolder links on details page

--- a/src/app/pages/details/details.scss
+++ b/src/app/pages/details/details.scss
@@ -18,6 +18,10 @@
         letter-spacing: -0.1rem;
     }
 
+    .row p a {
+        font-weight: bolder;
+    }
+
     .table-of-contents-link {
         cursor: pointer;
     }
