Add publication information to Details page

--- a/src/app/pages/details/details.hbs
+++ b/src/app/pages/details/details.hbs
@@ -92,6 +92,29 @@
                 <h2>Details</h2>
                 <h3>Authors</h3>
                 <div id="all-authors"></div>
+                <table class="publish-info">
+                    <tbody>
+                        <tr>
+                            <th>Publish Date</th>
+                            <td id='publish-date'></td>
+                        </tr>
+                        <tr>
+                            <th>ISBN-10</th>
+                            <td id='isbn-10'></td>
+                        </tr>
+                        <tr>
+                            <th>ISBN-13</th>
+                            <td id='isbn-13'></td>
+                        </tr>
+                        <tr>
+                            <th>License</th>
+                            <td class="license">
+                                <img src="/images/details/by-license.png" />
+                                <span class="text"></span>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
             </section>
             <section id="errata" class="errata">
