Updated Terms of Use copy

--- a/src/app/pages/tos/tos.hbs
+++ b/src/app/pages/tos/tos.hbs
@@ -7,8 +7,8 @@
         <h1>Terms of Use</h1>
 
         <p>
-            This user agreement (this “Agreement”) from OpenStax College describes the terms and conditions
-            on which you may use the OpenStax College educational service and content (collectively, the “Service”).
+            This user agreement (this “Agreement”) from OpenStax describes the terms and conditions
+            on which you may use the OpenStax educational service and content (collectively, the “Service”).
             If you do not accept and agree to be bound by the terms and conditions of this Agreement,
             you may not access or use the Service.
         </p>
@@ -21,29 +21,35 @@
         </p>
 
         <p>
-            OpenStax College may amend this Agreement at any time by posting the amended terms on the website,
+            OpenStax may amend this Agreement at any time by posting the amended terms on the website,
             and such amended terms shall become effective 30 days after being initially posted to the website.
             This Agreement may not otherwise be amended except in writing signed by you and an authorized
-            representative of OpenStax College.
+            representative of OpenStax.
         </p>
 
         <p>
             Each individual work in the Service is offered for license to you by the author of that work on
-            the terms and conditions set forth in the open content license associated with that individual
-            work, the Creative Commons License 4.0 International. You are required under U.S. copyright law,
-            the equivalent laws of other countries, and international treaties to respect the copyrights of
-            those authors and to use their works subject to the terms and conditions of their respective
-            licenses and applicable law. You may only copy, modify, distribute and otherwise use the works
-            in the Service in accordance with a license to do so or as may otherwise be permitted under applicable law.
+            the terms and conditions set forth in the Creative Commons license associated with that individual
+            work. You are required under U.S. copyright law, the equivalent laws of other countries, and
+            international treaties to respect the copyrights of those authors and to use their works subject
+            to the terms and conditions of their respective licenses and applicable law. You may only copy,
+            modify, distribute and otherwise use the works in the Service in accordance with a license to do
+            so or as may otherwise be permitted under applicable law.
         </p>
 
         <p>
-            Neither OpenStax College nor Rice University undertakes any obligation to review or monitor
+          All other content/information/imagery in the Service (including logos, taglines, book covers, text copy,
+          web site design, etc; excluding textbook content and content licensed from other entities) is Copyright
+          Rice University All Rights Reserved.
+        </p>
+
+        <p>
+            Neither OpenStax nor Rice University undertakes any obligation to review or monitor
             any content submitted to the Service and shall not have any responsibility or liability in
-            connection therewith. OpenStax College and Rice University may remove content if it is deemed
-            appropriate to do so by OpenStax College or Rice University, in their sole discretion, including,
+            connection therewith. OpenStax and Rice University may remove content if it is deemed
+            appropriate to do so by OpenStax or Rice University, in their sole discretion, including,
             but not limited to, to comply with law or legal process, to respond to third party complaints,
-            to enforce the terms and conditions of use, or to protect OpenStax College or Rice University.
+            to enforce the terms and conditions of use, or to protect OpenStax or Rice University.
         </p>
 
         <p>
@@ -55,7 +61,7 @@
 
         <p>
             UNDER NO CIRCUMSTANCES AND UNDER NO LEGAL THEORY, WHETHER IN TORT (INCLUDING NEGLIGENCE),
-            CONTRACT, OR OTHERWISE, SHALL OPENSTAX COLLEGE OR RICE UNIVERSITY, OR ITS TRUSTEES, OFFICERS,
+            CONTRACT, OR OTHERWISE, SHALL OPENSTAX OR RICE UNIVERSITY, OR ITS TRUSTEES, OFFICERS,
             EMPLOYEES AND REPRESENTATIVES, BE LIABLE TO YOU OR TO ANY THIRD PARTY FOR ANY DIRECT, INDIRECT,
             INCIDENTAL, CONSEQUENTIAL, SPECIAL, EXEMPLARY OR PUNITIVE DAMAGES OF ANY KIND DIRECTLY OR INDIRECTLY
             ARISING OUT OF OR IN CONNECTION WITH THE OPERATION, MAINTENANCE, ACCESS OR USE OF THE SERVICE.
@@ -63,9 +69,9 @@
         </p>
 
         <p>
-            OpenStax College and Rice University reserve the right at any time and from time to time,
+            OpenStax and Rice University reserve the right at any time and from time to time,
             in their sole discretion, to modify or discontinue, temporarily or permanently, the Service
-            with or without notice. OpenStax College and Rice University, and its trustees, officers,
+            with or without notice. OpenStax and Rice University, and its trustees, officers,
             employees and representatives, shall not have any responsibility or liability to you or to any
             third party in the event of any such modification, suspension or discontinuance of the Service.
         </p>
@@ -80,22 +86,8 @@
         </p>
 
         <p>
-            If you would like to create your own content and submit it to the Service for access and use by others,
-            you must complete a registration form and obtain a personal account and password from OpenStax College.
-            You are responsible and liable for maintaining the confidentiality of your password and account,
-            and are responsible and liable for all activities that occur under your account through
-            the use of your password.
-        </p>
-
-        <p>
-            If you create content for submission to the Service, you must offer it for license to others
-            with one or more of the specific licenses approved for use by OpenStax College.
-            A list of the licenses approved for use will be displayed when you submit your materials to the Service.
-        </p>
-
-        <p>
-            IF YOU BECOME A REGISTERED USER OF OPENSTAX COLLEGE, YOU AGREE TO INDEMNIFY, DEFEND AND HOLD
-            HARMLESS OPENSTAX COLLEGE AND RICE UNIVERSITY, AND ITS TRUSTEES, OFFICERS, EMPLOYEES AND REPRESENTATIVES,
+            IF YOU BECOME A REGISTERED USER OF OPENSTAX, YOU AGREE TO INDEMNIFY, DEFEND AND HOLD
+            HARMLESS OPENSTAX AND RICE UNIVERSITY, AND ITS TRUSTEES, OFFICERS, EMPLOYEES AND REPRESENTATIVES,
             FROM ANY AND ALL DEMANDS, CLAIMS, ACTIONS, DAMAGES, LOSSES, LIABILITIES, COSTS AND EXPENSES,
             INCLUDING ATTORNEYS’ FEES AND COURT COSTS, DIRECTLY OR INDIRECTLY ARISING OUT OF OR IN CONNECTION
             WITH YOUR ACCESS OR USE OF THE SERVICE, YOUR SUBMISSION OF ANY CONTENT TO THE SERVICE, OR YOUR
