Scroll-down chevrons on banners, form fixes, Impact responsiveness
Corrected form field names on finish-profile
Added more user info fields to faculty-verification
Added scroll-down chevrons to banners on Higher Ed, K-12, and Impact
(replacing “learn more” and such)
Styled Impact page responsively
Linked Font Awesome CDN in index.html, so it works in Firefox

--- a/src/app/pages/finish-profile/finish-profile.hbs
+++ b/src/app/pages/finish-profile/finish-profile.hbs
@@ -29,7 +29,7 @@
                     </label>
                     <label>
                         <span>Email</span>
-                        <input name="email" pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="text" required />
+                        <input name="institutional_email__c" pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="text" required />
                     </label>
                     <label>
                         <span>Phone number</span>
