--- a/src/app/pages/higher-ed/higher-ed.hbs
+++ b/src/app/pages/higher-ed/higher-ed.hbs
@@ -18,10 +18,10 @@
                         learning technology give students the tools they need to
                         succeed without having to weigh the cost.
                     </div>
-                    <div class="more"><a class="down-page" href="#getting-started">Learn More</a></div>
                 </div>
             </div>
         </div>
+        <span class="scrolldown-chevron"><a href="#getting-started"><i class="fa fa-chevron-down"></i></a></span>
         <div id="getting-started" class="getting-started">
             <div class="header">Getting Started</div>
             <ol class="steps">
