--- a/src/app/pages/impact/impact.hbs
+++ b/src/app/pages/impact/impact.hbs
@@ -16,12 +16,12 @@
                         Meet the schools who’ve adopted OpenStax and some of the students who’ve benefited
                         from free access to the learning materials they need to succeed.
                     </div>
-                    <div class="more"><a class="down-page" href="#getting-started">Learn More</a></div>
                 </div>
             </div>
         </div>
+        <span class="scrolldown-chevron"><a href="#affiliates"><i class="fa fa-chevron-down"></i></a></span>
 
-        <div class="affiliates">
+        <div id="affiliates" class="affiliates">
             <div class="text-wrapper">
                 <h2>Institutional Partner and Affiliate Schools</h2>
 
