--- a/src/app/pages/faculty-verification/faculty-verification.hbs
+++ b/src/app/pages/faculty-verification/faculty-verification.hbs
@@ -20,6 +20,8 @@
             <input type=hidden name="oid" value="00DU0000000Kwch">
             <input type=hidden name="retURL" value="{{urlOrigin}}/faculty-confirmation">
             <input type=hidden name="lead_source" value="OSC Faculty">
+            <input type=hidden name="user_id" />
+            <input type=hidden name="OS_Accounts_ID__c" />
         </div>
 
         <div class="labeled-inputs row">
@@ -57,7 +59,7 @@
                 </label>
                 <label>
                     Official institutional email address
-                    <input name="email" pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="text" required />
+                    <input name="institutional_email__c" pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="text" required />
                     <small>A verification email will be sent to this address</small>
                 </label>
             </div>
