--- a/src/app/pages/k-12/k-12.hbs
+++ b/src/app/pages/k-12/k-12.hbs
@@ -7,6 +7,7 @@
 <div class="k-12-page">
     <main id="maincontent">
         <div class="banner"></div>
+        <span class="scrolldown-chevron"><a href="#tutor"><i class="fa fa-chevron-down"></i></a></span>
         <div class="tutor-banner" id="tutor">
             <img class="tutor-bg-overlay" src="/images/k-12/paper-plane.svg" />
         </div>
